<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_half_opaque"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/title_initialize_token"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/api_key_pub_box"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/api_key_pub_hint"
                android:maxLines="1"
                android:maxLength="100" />

            <EditText
                android:id="@+id/api_key_sec_box"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/api_key_sec_hint"
                android:maxLines="1"
                android:maxLength="100" />

            <TextView
                android:id="@+id/fetch_token_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/initialize_token_message"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/loading_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/fetch_token_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/button_fetch_token" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
